# controlVNC

./: CMakeLists.txt  README.md
vncviewer/: CMakeLists.txt  DesktopWindow.cxx  DesktopWindow.h  SideBar.cpp  SideBar.h  vncviewer.cxx
